<resources>
    <string name="app_name">RankUp</string>
    <string name="host_game_button_str">Host A Game</string>
    <string name="view_history_button_str">View History</string>
    <string name="rankup_title_str">Welcome to RankUP</string>
    <string name="add_friend_button_str">add friend</string>
    <string name="unknown_player_name_str">unknown player</string>
    <string name="select_my_team_str">My Team</string>
    <string name="selec_opponent_team_str">Opponents</string>
    <string name="host_start_game_button_str">Start RankUp</string>
    <string name="player_list_item_is_friend">FRIEND</string>
    <string name="add_friend_button_vertical_str">add<br />friend</string>
    <string name="rankup_action_button_play_str">play</string>
    <string name="rankup_action_button_deal_str">deal</string>
    <string name="game_history_list_view_button_str">delete all histories</string>
    <string name="rankup_notification_channel_name">RankUpNotificationChannel</string>
    <string name="rankup_notification_channel_description">Channel for Notifications from
        RankUp</string>
    <!--    the % formatter is called the placeholders in resource strings -->
    <string name="game_history_list_view_game_time">Game @%s</string>
    <string name="game_history_list_view_round">Round %d</string>
    <string name="rankup_notification_title">A RankUp game has finished!</string>
    <string name="rankup_notification_text">%s is the winner!</string>
</resources>