<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeFragment">

    <TextView
        android:id="@+id/rankup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rankup_title_str"
        android:textSize="@dimen/welcome_title_font_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/host_game_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/host_game_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/host_game_button_str"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view_history_button"
        app:layout_constraintStart_toStartOf="@+id/view_history_button"
        app:layout_constraintTop_toBottomOf="@+id/rankup_title" />

    <Button
        android:id="@+id/view_history_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_history_button_str"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/host_game_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
