<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HostGameFragment">

    <TextView
        android:id="@+id/textView3"
        style="@style/game_team_heading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/select_my_team_str"
        app:layout_constraintBottom_toTopOf="@+id/player_myself"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <com.example.rankupandroid.PlayerView
        android:id="@+id/player_myself"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/host_game_player_view_margin"
        android:layout_marginRight="@dimen/host_game_player_view_margin"
        app:layout_constraintBottom_toTopOf="@+id/player_teammate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <com.example.rankupandroid.PlayerView
        android:id="@+id/player_teammate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/host_game_player_view_margin"
        android:layout_marginRight="@dimen/host_game_player_view_margin"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_myself" />

    <TextView
        android:id="@+id/textView4"
        style="@style/game_team_heading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/selec_opponent_team_str"
        app:layout_constraintBottom_toTopOf="@+id/player_opponent2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_teammate" />

    <com.example.rankupandroid.PlayerView
        android:id="@+id/player_opponent1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/host_game_player_view_margin"
        android:layout_marginRight="@dimen/host_game_player_view_margin"
        app:layout_constraintBottom_toTopOf="@+id/host_start_game_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_opponent2" />

    <com.example.rankupandroid.PlayerView
        android:id="@+id/player_opponent2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/host_game_player_view_margin"
        android:layout_marginRight="@dimen/host_game_player_view_margin"
        app:layout_constraintBottom_toTopOf="@+id/player_opponent1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/host_start_game_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/host_start_game_button_str"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_opponent1" />

</androidx.constraintlayout.widget.ConstraintLayout>